--- a/app/src/main/res/layout/fragment_my_exercises.xml
+++ b/app/src/main/res/layout/fragment_my_exercises.xml
@@ -22,6 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/tv_no_exercises"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@id/bt_new_exercise"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
