--- a/app/src/main/res/layout/fragment_new_program.xml
+++ b/app/src/main/res/layout/fragment_new_program.xml
@@ -6,11 +6,8 @@
 
     <data>
         <variable
-            name="viewModel"
-            type="com.example.exercisetracker.viewmodel.SharedViewModel"/>
-        <variable
             name="programtype"
-            type="com.example.exercisetracker.db.AppProgramTypeEntity"/>
+            type="com.example.exercisetracker.db.AppProgramType"/>
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -18,12 +15,13 @@
         android:layout_height="match_parent"
         tools:context=".NewProgramFragment">
 
-        <!-- Image view skal hente icon fra programtype.icon-->
+
         <ImageView
             android:id="@+id/program_type_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/side_margin"
+            android:src="@{programtype.icon}"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -128,35 +126,28 @@
 
         <Button
             android:id="@+id/button_save_program"
-            android:layout_width="170dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/bt_save_program"
-            android:layout_marginBottom="@dimen/side_margin"
-            app:layout_constraintBottom_toTopOf="@id/button_my_programs"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/button_back"
-            />
-
-        <Button
-            android:id="@+id/button_back"
-            android:layout_width="170dp"
-            android:layout_height="wrap_content"
-            android:text="@string/button_back"
-            android:layout_marginBottom="@dimen/side_margin"
-            app:layout_constraintBottom_toTopOf="@id/button_my_programs"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/button_save_program"
-            />
-
-        <Button
-            android:id="@+id/button_my_programs"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/bt_my_programs"
-            android:layout_marginTop="@dimen/side_margin"
+            android:layout_margin="@dimen/side_margin"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            />
+
+
+        <!-- Delete button is set to visible when navigating via "edit-program" option in myPrograms-->
+        <Button
+            android:id="@+id/button_delete"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/btn_delete_program"
+            android:layout_margin="@dimen/side_margin"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            />
 
 
 
