--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -4,15 +4,16 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".FirstFragment">
+    tools:context=".LoginFragment"
+    android:theme="@style/Theme.ExerciseTracker.NoActionBar">
 
 <data>
     <variable
         name="viewModel"
         type="com.example.exercisetracker.viewmodel.SharedViewModel" />
     <variable
-        name="firstFragment"
-        type="com.example.exercisetracker.FirstFragment" />
+        name="loginFragment"
+        type="com.example.exercisetracker.LoginFragment" />
 </data>
 
 <androidx.constraintlayout.widget.ConstraintLayout
