--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,8 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/Theme.ExerciseTracker.PopupOverlay" />
+            app:popupTheme="@style/Theme.ExerciseTracker.PopupOverlay"
+            app:title="Velkommen"/>
 
     </com.google.android.material.appbar.AppBarLayout>
 
