fixed a nav action

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -17,6 +17,9 @@
         <action
             android:id="@+id/action_FirstFragment_to_myStatisticsFragment"
             app:destination="@id/myStatisticsFragment" />
+        <action
+            android:id="@+id/action_LoginFragment_to_mySessionsFragment"
+            app:destination="@id/mySessionsFragment" />
     </fragment>
 
     <fragment
