--- a/app/src/main/res/layout/fragment_program_session.xml
+++ b/app/src/main/res/layout/fragment_program_session.xml
@@ -1,22 +1,21 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="16dp">
+    android:layout_height="match_parent">
 
-    <ScrollView
-        android:id="@+id/scroll_view"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/personal_description_edit_text"
-        android:layout_alignParentTop="true">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
+        <!-- Top Section -->
         <LinearLayout
+            android:id="@+id/top_section"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="16dp">
 
             <TextView
                 android:id="@+id/timer_text"
@@ -30,75 +29,127 @@
                 android:id="@+id/user_program_icon"
                 android:layout_width="64dp"
                 android:layout_height="64dp"
-                android:src="@drawable/ic_launcher_foreground"
-                android:layout_gravity="center_horizontal" />
+                android:layout_gravity="center_horizontal"
+                android:src="@drawable/ic_launcher_foreground" />
+        </LinearLayout>
 
-            <TextView
-                android:id="@+id/app_program_type_description"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/app_program_type_description"
-                android:textSize="18sp"
-                android:layout_gravity="center_horizontal" />
+        <!-- Middle Section -->
 
-            <TextView
-                android:id="@+id/user_program_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/user_program_name"
-                android:textSize="18sp"
-                android:layout_gravity="center_horizontal" />
-            <TextView
-                android:id="@+id/tv_use_gps"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/tv_bruke_gps"
-                android:layout_margin="@dimen/margin_between_elements"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/user_program_name"/>
-
-            <RadioGroup
-                android:id="@+id/gps_options"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                app:layout_constraintStart_toEndOf="@id/tv_use_gps"
-                app:layout_constraintTop_toBottomOf="@id/user_program_name">
-
-                <RadioButton
-                    android:id="@+id/rb_gps_yes"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/yes"
-                    android:layout_marginEnd="@dimen/margin_between_elements"/>
-
-                <RadioButton
-                    android:id="@+id/rb_gps_no"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/no"
-                    android:layout_marginStart="@dimen/margin_between_elements"/>
-
-            </RadioGroup>
+        <!-- Bottom Section -->
+        <androidx.core.widget.NestedScrollView
+            android:id="@+id/scroll_view"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:padding="16dp">
 
             <LinearLayout
-                android:id="@+id/exercises_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingTop="16dp"
-                tools:listitem="@layout/exercise_item"
-                xmlns:tools="http://schemas.android.com/tools">
-            </LinearLayout>
-        </LinearLayout>
-    </ScrollView>
+                android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/personal_description_edit_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/buttons_container"
-        android:hint="@string/personal_description" />
+                <TextView
+                    android:id="@+id/app_program_type_description"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:text="@string/app_program_type_description"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/user_program_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:text="@string/user_program_name"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/tv_use_gps"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/margin_between_elements"
+                    android:text="@string/tv_bruke_gps" />
+
+                <RadioGroup
+                    android:id="@+id/gps_options"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <RadioButton
+                        android:id="@+id/rb_gps_yes"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="@dimen/margin_between_elements"
+                        android:text="@string/yes" />
+
+                    <RadioButton
+                        android:id="@+id/rb_gps_no"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/margin_between_elements"
+                        android:text="@string/no" />
+
+                </RadioGroup>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/imageview_exercise"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:adjustViewBounds="true"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/img_outdoor_runner" />
+
+                    <View
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:layout_weight="1" />
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <Button
+                            android:id="@+id/button_gallery"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/select_from_gallery" />
+
+                        <Button
+                            android:id="@+id/button_camera"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/take_new_picture" />
+                    </LinearLayout>
+                </LinearLayout>
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/exercises_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="16dp" />
+
+            </LinearLayout>
+        </androidx.core.widget.NestedScrollView>
+
+        <LinearLayout
+            android:id="@+id/bottom_section"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="16dp">
+
+            <EditText
+                android:id="@+id/personal_description_edit_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/personal_description" />
 
     <LinearLayout
         android:id="@+id/buttons_container"
@@ -130,4 +181,6 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="16dp" />
     </LinearLayout>
-</RelativeLayout>
+        </LinearLayout>
+    </LinearLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
