Delete button half-done: when editing program in NewProgramFragment visible in UI, navigates correctly. Deleting via viewmodel fails

--- a/app/src/main/res/layout/fragment_new_program.xml
+++ b/app/src/main/res/layout/fragment_new_program.xml
@@ -129,8 +129,11 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/bt_save_program"
-            android:layout_margin="@dimen/side_margin"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="@dimen/margin_between_elements"
+            android:layout_marginBottom="@dimen/margin_between_elements"
+            android:layout_marginStart="@dimen/side_margin"
+            android:layout_marginEnd="@dimen/side_margin"
+            app:layout_constraintBottom_toTopOf="@id/button_delete"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             />
@@ -142,7 +145,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/btn_delete_program"
-            android:layout_margin="@dimen/side_margin"
+            android:layout_marginTop="@dimen/margin_between_elements"
+            android:layout_marginBottom="@dimen/margin_between_elements"
+            android:layout_marginStart="@dimen/side_margin"
+            android:layout_marginEnd="@dimen/side_margin"
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
