--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,15 +2,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.exercisetracker.MainActivity">
-    <!--
+
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
-        -->
+        android:id="@+id/nav_home_statistics"
+        android:title="@string/home"
+        android:icon="@drawable/home_img"
+        app:showAsAction="ifRoom"/>
+    <!--OPTIONAL ICON OG SHOW AS ACTION-->
     <item
-        android:id="@+id/nav_my_statistics"
+        android:id="@+id/nav_all_sessions"
         android:title="@string/nav_my_sessions" />
     <item
         android:id="@+id/nav_my_exercises"
@@ -18,9 +18,7 @@
     <item
         android:id="@+id/action_my_programs"
         android:title="@string/my_programs" />
-    <item
-        android:id="@+id/new_session"
-        android:title="@string/new_session" />
+
     <item
         android:id="@+id/create_new"
         android:icon="@drawable/add_white_img"
