More views to fragment_session_details

--- a/app/src/main/res/layout/fragment_session_details.xml
+++ b/app/src/main/res/layout/fragment_session_details.xml
@@ -17,58 +17,79 @@
         tools:context=".SessionDetailsFragment">
 
         <com.google.android.material.card.MaterialCardView
-            android:id="@+id/cardImage"
+            android:id="@+id/cardHeader"
             android:layout_height="120dp"
             android:layout_width="match_parent"
+            android:padding="@dimen/margin_between_elements"
+            android:layout_marginBottom="@dimen/margin_between_elements"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            app:strokeWidth="1dp"
+            app:strokeColor="@color/border"
+            app:cardElevation="1dp">
 
-            <ImageView
-                android:id="@+id/sessionIcon"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:scaleType="fitXY"
-                android:adjustViewBounds="true"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                tools:src="@drawable/roing_img"/>
+                android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/sessionPhoto"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:scaleType="fitXY"
-                android:adjustViewBounds="true"
-                android:visibility="gone"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                tools:src="@drawable/img_outdoor_runner"/>
+                <ImageView
+                    android:id="@+id/sessionIcon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:layout_gravity="center"
+                    android:visibility="gone"
+                    android:scaleType="fitXY"
+                    android:adjustViewBounds="true"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toTopOf="@id/sessionProgramName"
+                    tools:src="@drawable/roing_img"/>
 
+                <ImageView
+                    android:id="@+id/sessionPhoto"
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:layout_gravity="center"
+                    android:scaleType="fitXY"
+                    android:adjustViewBounds="true"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toTopOf="@id/sessionProgramName"
+                    tools:src="@drawable/img_outdoor_runner"/>
+
+                <TextView
+                    android:id="@+id/sessionProgramName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:padding="@dimen/margin_between_elements"
+                    android:text="@{@string/sessionProgramName(viewModel.currentDisplayableSession.userProgramName)}"
+                    android:textSize="@dimen/header_text"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="parent"
+                    tools:text="program name" />
+
+            </LinearLayout>
         </com.google.android.material.card.MaterialCardView>
 
-        <TextView
-            android:id="@+id/sessionProgramName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/margin_between_elements"
-            android:text="@{@string/sessionProgramName(viewModel.currentDisplayableSession.userProgramName)}"
-            android:textSize="@dimen/header_text"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/cardImage"
-            tools:text="program name" />
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/cardTime"
             android:layout_height="100dp"
-            android:layout_width="90dp"
-            android:layout_marginLeft="@dimen/margin_between_elements"
-            app:layout_constraintTop_toBottomOf="@id/sessionProgramName"
+            android:layout_width="0dp"
+            android:layout_marginTop="@dimen/margin_between_elements"
+            android:layout_marginEnd="@dimen/margin_between_elements"
+            android:layout_marginBottom="@dimen/margin_between_elements"
+            android:padding="@dimen/margin_between_elements"
+            app:layout_constraintTop_toBottomOf="@id/cardHeader"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/cardDistance"
             app:strokeWidth="1dp"
             app:strokeColor="@color/border"
             app:cardElevation="0dp">
@@ -104,10 +125,13 @@
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/cardDistance"
             android:layout_height="100dp"
-            android:layout_width="90dp"
-            android:layout_marginStart="@dimen/margin_between_elements"
-            app:layout_constraintTop_toBottomOf="@id/sessionProgramName"
+            android:layout_width="0dp"
+            android:padding="@dimen/margin_between_elements"
+            android:layout_marginTop="@dimen/margin_between_elements"
+            android:layout_marginBottom="@dimen/margin_between_elements"
+            app:layout_constraintTop_toBottomOf="@id/cardHeader"
             app:layout_constraintStart_toEndOf="@id/cardTime"
+            app:layout_constraintEnd_toEndOf="parent"
             app:strokeWidth="1dp"
             app:strokeColor="@color/border"
             app:cardElevation="0dp">
@@ -143,10 +167,14 @@
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/cardHeight"
             android:layout_height="100dp"
-            android:layout_width="90dp"
-            android:layout_marginStart="@dimen/margin_between_elements"
-            app:layout_constraintTop_toBottomOf="@id/sessionProgramName"
-            app:layout_constraintStart_toEndOf="@id/cardDistance"
+            android:layout_width="0dp"
+            android:padding="@dimen/margin_between_elements"
+            android:layout_marginEnd="@dimen/margin_between_elements"
+            android:layout_marginBottom="@dimen/margin_between_elements"
+            android:layout_marginTop="@dimen/margin_between_elements"
+            app:layout_constraintTop_toBottomOf="@id/cardTime"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/cardSpeed"
             app:strokeWidth="1dp"
             app:strokeColor="@color/border"
             app:cardElevation="0dp">
@@ -172,9 +200,62 @@
                     android:layout_height="wrap_content"
                     android:padding="@dimen/margin_between_elements"
                     android:text="@{@string/sessionHeight(viewModel.currentDisplayableSession.sessionHeight)}"
-                    app:layout_constraintStart_toEndOf="@+id/totalDistance"
-                    app:layout_constraintTop_toBottomOf="@+id/sessionProgramName"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
                     tools:text="height" />
+
+            </LinearLayout>
+        </com.google.android.material.card.MaterialCardView>
+
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/cardSpeed"
+            android:layout_height="100dp"
+            android:layout_width="0dp"
+            android:padding="@dimen/margin_between_elements"
+            android:layout_marginEnd="@dimen/margin_between_elements"
+            android:layout_marginBottom="@dimen/margin_between_elements"
+            android:layout_marginTop="@dimen/margin_between_elements"
+            app:layout_constraintTop_toBottomOf="@id/cardDistance"
+            app:layout_constraintStart_toEndOf="@id/cardHeight"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:strokeWidth="1dp"
+            app:strokeColor="@color/border"
+            app:cardElevation="0dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/speedHeader"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/margin_between_elements"
+                    android:text="Fart"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    />
+
+                <TextView
+                    android:id="@+id/avgSpeed"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/margin_between_elements"
+                    android:text="@{@string/sessionHeight(viewModel.currentDisplayableSession.sessionAvgSpeed)}"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:text="snittfart" />
+
+                <TextView
+                    android:id="@+id/maxSpeed"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/margin_between_elements"
+                    android:text="@{@string/sessionHeight(viewModel.currentDisplayableSession.sessionAvgSpeed)}"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:text="maxfart" />
 
             </LinearLayout>
         </com.google.android.material.card.MaterialCardView>
