--- a/app/src/main/res/layout/fragment_session_details.xml
+++ b/app/src/main/res/layout/fragment_session_details.xml
@@ -43,12 +43,13 @@
                     android:visibility="gone"
                     android:scaleType="fitXY"
                     android:adjustViewBounds="true"
+                    android:src="@{viewModel.currentDisplayableSession.programTypeIcon}"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintBottom_toTopOf="@id/sessionProgramName"
                     tools:src="@drawable/roing_img"/>
-
+                <!--Sission photo is never set-->
                 <ImageView
                     android:id="@+id/sessionPhoto"
                     android:layout_width="wrap_content"
@@ -262,13 +263,13 @@
 
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/exercise_recycler"
+            android:id="@+id/exerciseRecycler"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:visibility="gone"
             android:clipToPadding="false"
             android:padding="8dp"
             android:scrollbars="vertical"
-            android:visibility="gone"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -277,7 +278,6 @@
             tools:listitem="@layout/exercise_item"/>
 
         <androidx.fragment.app.FragmentContainerView
-            android:visibility="gone"
             android:id="@+id/map"
             android:name="com.google.android.gms.maps.SupportMapFragment"
             android:layout_width="0dp"
